# stoolap-flutter

./: .metadata  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  ffigen.yaml  pubspec.yaml
.firecrawl/: stoolap-docs-full.md  stoolap-docs-map.json  stoolap-full-map.json  stoolap-github.md
.github/workflows/: ci.yml
android/: build.gradle
android/src/main/: AndroidManifest.xml
example/: README.md  pubspec.yaml
example/android/app/: build.gradle.kts
example/android/app/src/main/: AndroidManifest.xml
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/linux/: CMakeLists.txt
example/linux/flutter/: generated_plugins.cmake
example/linux/runner/: my_application.cc
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner/Configs/: AppInfo.xcconfig
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
ios/: stoolap_flutter.podspec
lib/: stoolap_flutter.dart  stoolap_flutter_bindings_generated.dart
lib/src/: reactive_db.dart
lib/src/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
lib/src/rust/api/: db.dart  db.freezed.dart
linux/: CMakeLists.txt
macos/: stoolap_flutter.podspec
macos/Classes/: stoolap_flutter.c
rust/: Cargo.toml
rust/src/: frb_generated.rs
rust/src/api/: db.rs  mod.rs
src/: CMakeLists.txt  stoolap_flutter.c
test/: debug_db_test.dart  stoolap_flutter_test.dart
windows/: CMakeLists.txt
(+2 files in other folders)
